--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -6,6 +6,9 @@
     justify-content: center ;
 
 }
+.bodylampada{
+    background-color: yellow
+}
 .aboutme{
     color:aqua;
     text-align: center;
